Some changes in the repository.

--- a/asset/layout/irsam/index.html
+++ b/asset/layout/irsam/index.html
@@ -17,7 +17,7 @@
 		
 		<!-- Zone 1 Script & CSS -->
 		<script type="text/javascript" src="zone1/controler.js"></script>
-		<link href="zone1/style.less" rel="stylesheet/less" />
+		<link href="../../zone/mainZone_irsam/style.less" rel="stylesheet/less" />
 
 	</head>		
 
