--- a/asset/element/layout/irsam/index.html
+++ b/asset/element/layout/irsam/index.html
@@ -8,31 +8,26 @@
 		<script type="text/javascript" src="js/utils.js"></script>
     	<script type="text/javascript" src="js/date.js"></script>
     	<script type="text/javascript" src="js/controler.js"></script>
-    	
-    	<!-- import the less interpreter -->
-	    <script type="text/javascript" src="js/libs/less.js"></script>
+
 		
 		<link href="less/als.css" type="text/css" rel="stylesheet" />
 		<link href="less/style.less" rel="stylesheet/less" id="stylePage"/>
-		
-		<!-- Zone 1 Script & CSS -->
-		<script type="text/javascript" src="zone1/controler.js"></script>
-		<link href="../../zone/mainZone_irsam/style.less" rel="stylesheet/less" />
 
+        $zoneScript
+
+        <!-- import the less interpreter -->
+        <script type="text/javascript" src="js/libs/less.js"></script>
 	</head>		
 
-	<body onload="z1 = init_zone1();">
+	<body onload="$onLoadContent">
 		<!--  to manage alert, not used for now -->
 		<div id="conteneurAls">
 			<span id="alerte"></span>
 			<span id="alarme"></span>
 		</div>
 
-		<!--  zone 1 (info) -->
-		<div id="zone1">
-			<span class="logo" id="zone1_logo"></span>
-			<span class="title" id="zone1_title"></span>
-		</div>
+        $layoutBody
+
 		<div id="logo_loading"><img src="img/logo_loading.jpg" /></div>
 	</body>
 </html>
