--- a/generator/asset/template/build-config-grails-app.groovy.vm
+++ b/generator/asset/template/build-config-grails-app.groovy.vm
@@ -5,6 +5,7 @@ grails.project.test.reports.dir = "target/test-reports"
 grails.project.target.level = 1.6
 grails.project.source.level = 1.6
 grails.project.war.file = "$warFile"
+grails.enable.native2ascii = false
 
 grails.project.dependency.resolution = {
     // inherit Grails' default dependencies
