Fix an error with velocity variable in layout

--- a/generator/asset/element/layout/glc/index.html
+++ b/generator/asset/element/layout/glc/index.html
@@ -13,7 +13,7 @@
     <link href="img/climacons-font/webfont/climacons-font.css" rel="stylesheet" type="text/css" />
     <link href="less/style.less" rel="stylesheet/less" id="stylePage"/>
 
-    $zoneScript
+    $zoneScripts
 
     <!-- Alert Script & CSS --><!--
 		<script type="text/javascript" src="zoneAlert/controler.js"></script>
