--- a/generator/asset/element/layout/irsam/index.html
+++ b/generator/asset/element/layout/irsam/index.html
@@ -13,7 +13,7 @@
 		<link href="less/als.css" type="text/css" rel="stylesheet" />
 		<link href="less/style.less" rel="stylesheet/less" id="stylePage"/>
 
-        $zoneScript
+        $zoneScripts
 
         <!-- import the less interpreter -->
         <script type="text/javascript" src="js/libs/less.js"></script>
