Another minor change

--- a/generator/asset/element/zone/mainZone_irsam/style.less
+++ b/generator/asset/element/zone/mainZone_irsam/style.less
@@ -23,7 +23,7 @@
 .title {
     position : absolute;
     top: 0px;
-    color: @textIrsam;
+    color: white;
     font-weight:bold;
 	font-size:200%;
 	left : 0px;
