--- a/generator/asset/element/layout/choralies_attente/less/functions.less
+++ b/generator/asset/element/layout/choralies_attente/less/functions.less
@@ -152,6 +152,19 @@
 .yourcast{
 	background: transparent url('../img/yourcast_small_blue.png') no-repeat center 8px;
 }
+.yourcast2{
+	background: transparent url('../img/experimentation_yourcast_supralog1.png') no-repeat 23% 90%;
+	background-size:8%;
+}
+.yourcast2Mobile{
+	background: transparent url('../img/experimentation_yourcast_supralog1.png') no-repeat 50% 20%;
+	background-size:22%;
+}
+.yourcast3{
+	background: transparent url('../img/experimentation_yourcast_supralog2.png') no-repeat 25% 90%;
+	background-size:15%;
+
+}
 
 .legendeImage {
 	background-color: rgba(0, 0, 0, 0.70);
