--- a/generator/asset/element/zone/headerZone_choralies/style.less
+++ b/generator/asset/element/zone/headerZone_choralies/style.less
@@ -5,7 +5,7 @@
     width : 100%;
     height: 16%;
     background:none;
-    .yourcast;
+    .yourcast2;
     margin-bottom:0%;
     color:#ffffff;
     position:relative;
@@ -29,6 +29,7 @@
 		text-align:right;
 		padding-right:2%;
 		line-height:150%;
+		.yourcast2Mobile;
 	}
 }
 
