Choralies : update layout load lib less

--- a/generator/asset/element/layout/choralies_ateliers/index-ateliers.html
+++ b/generator/asset/element/layout/choralies_ateliers/index-ateliers.html
@@ -41,7 +41,7 @@
 		
 	</head>
 
-	<body onload="$onLoadContent" class="ateliers">
+	<body onload="$onLoadContent; loadScript('js/libs/less.js');" class="ateliers">
 
 	$layoutBody
 			
