--- a/generator/asset/element/layout/choralies_public/index-public.html
+++ b/generator/asset/element/layout/choralies_public/index-public.html
@@ -41,7 +41,7 @@
 		
 	</head>
 
-	<body onload="$onLoadContent" class="public">
+	<body onload="$onLoadContent; loadScript('js/libs/less.js');" class="public">
 
 	$layoutBody
 							
