--- a/generator/asset/element/layout/choralies_theatre/index-theatre.html
+++ b/generator/asset/element/layout/choralies_theatre/index-theatre.html
@@ -41,7 +41,7 @@
 		
 	</head>
 
-	<body onload="$onLoadContent" class="theatre">
+	<body onload="$onLoadContent; loadScript('js/libs/less.js');" class="theatre">
 
 		$layoutBody
 					
