Choralies : update des less des renderer pour enlever les id des zones en dur

--- a/generator/asset/element/renderer/choralies_render_Affiches_for_main_zone.js/less/choralies_render_Affiches_for_main_zone.less
+++ b/generator/asset/element/renderer/choralies_render_Affiches_for_main_zone.js/less/choralies_render_Affiches_for_main_zone.less
@@ -1,7 +1,7 @@
 @import "style";
 
 
-#mainZone  .main_div_zone{
+.main_div_zone{
 
 
 	
@@ -59,7 +59,7 @@
 
 }
 
-#mainZone {
+
 	.affiche_counter{
 		position:absolute;
 		right:5px;
@@ -71,7 +71,7 @@
 		margin-left:20px;
 		font-size:90%;
 	}
-}
+
 
 
 
