--- a/generator/asset/element/renderer/choralies_render_Announces_for_main_zone.js/less/choralies_render_Announces_for_main_zone.less
+++ b/generator/asset/element/renderer/choralies_render_Announces_for_main_zone.js/less/choralies_render_Announces_for_main_zone.less
@@ -1,7 +1,7 @@
 @import "style";
 
 
-#mainZone  .main_div_zone{
+.main_div_zone{
 
 
 	
@@ -38,7 +38,7 @@
 
 }
 
-#mainZone {
+
 	.announce_counter{
 		position:absolute;
 		right:5px;
@@ -50,7 +50,7 @@
 		margin-left:20px;
 		font-size:90%;
 	}
-}
+
 
 
 
