--- a/generator/asset/element/renderer/choralies_render_Articles_for_main_zone.js/less/choralies_render_Articles_for_main_zone.less
+++ b/generator/asset/element/renderer/choralies_render_Articles_for_main_zone.js/less/choralies_render_Articles_for_main_zone.less
@@ -1,7 +1,7 @@
 @import "style";
 
 
-#mainZone  .main_div_zone{
+.main_div_zone{
 
 
 	
@@ -40,7 +40,7 @@
 
 }
 
-#mainZone {
+
 	.article_counter{
 		position:absolute;
 		right:5px;
@@ -48,7 +48,7 @@
 		color:@gray;
 		z-index:101;
 	}
-}
+
 
 
 
