--- a/generator/asset/element/renderer/choralies_render_Affiches_for_left_zone.js/less/choralies_render_Affiches_for_left_zone.less
+++ b/generator/asset/element/renderer/choralies_render_Affiches_for_left_zone.js/less/choralies_render_Affiches_for_left_zone.less
@@ -1,7 +1,7 @@
 @import "style";
 
 
-#leftZone  .left_div_zone{
+.left_div_zone{
 	margin-bottom:15px;
 	border:0px solid rgba(255, 255, 255, 0.65);
 	border-bottom:0px solid @black;
@@ -67,7 +67,7 @@
 
 }
 
-#leftZone {
+
 	.affiche_counter{
 		position:absolute;
 		right:5px;
@@ -79,7 +79,7 @@
 		margin-left:20px;
 		font-size:90%;
 	}
-}
+
 
 
 
