--- a/generator/asset/element/renderer/choralies_render_Announces_for_right_push.js/less/choralies_render_Announces_for_right_push.less
+++ b/generator/asset/element/renderer/choralies_render_Announces_for_right_push.js/less/choralies_render_Announces_for_right_push.less
@@ -1,6 +1,6 @@
 @import "style";
 
-#pushZone .push_div_zone{
+.push_div_zone{
 	margin-bottom:15px;
 	border:0px solid rgba(255, 255, 255, 0.65);
 	border-bottom:0px solid @black;
