--- a/generator/asset/element/renderer/choralies_render_Twitter_for_scrolling.js/less/choralies_render_Twitter_for_scrolling.less
+++ b/generator/asset/element/renderer/choralies_render_Twitter_for_scrolling.js/less/choralies_render_Twitter_for_scrolling.less
@@ -1,7 +1,7 @@
 @import "style";
 
 
-#scrollingZone .scrollContentEachLogoLeft{
+.scrollContentEachLogoLeft{
     margin-left:10px;
     margin-right:10px;
     height:90%;
@@ -13,7 +13,7 @@
     position:relative;
 }
 
-#scrollingZone .scrollContentEachLogoLeft .scrollContent{
+.scrollContentEachLogoLeft .scrollContent{
 
 
 	/* Twitter */
