Choralies : update des renderer sms

--- a/generator/asset/element/zone/scrollingBottomZone_choralies/style.less
+++ b/generator/asset/element/zone/scrollingBottomZone_choralies/style.less
@@ -82,6 +82,9 @@
     overflow:hidden;
     span{
     	line-height:135%;
+    	span{
+    		line-height:220%;
+    	}
     }
     position:relative;
 }
