--- a/generator/asset/element/renderer/choralies_render_SMS_for_scrolling.js/less/choralies_render_SMS_for_scrolling.less
+++ b/generator/asset/element/renderer/choralies_render_SMS_for_scrolling.js/less/choralies_render_SMS_for_scrolling.less
@@ -1,32 +1,26 @@
 @import "style";
 
-.scrollContentEachLogoLeft .scrollContent{
+.scrollContentEachLogoLeft span.scrollContent{
 
 	/* SMS */
 
-	.sms{
+	span.sms{
 		moz-box-shadow: none;
 	  	-webkit-box-shadow: none;
 	    box-shadow: none;
-		padding:0px 10px 0 10px;
+		padding:auto 10px auto 20px;
 		margin-right:20px;
 		display: inline-block;
 	  	line-height:220%;
 	  	height:100%;
-	  	background-color:transparent;
+	  	background-color:@blue;
 	  	border:0px;
 		
-		.sms_author{
-			background-color:transparent;
-			color:@white;
-			padding-top:0em;
-			i { color:@white;}
-			font-weight:bold;
-		}
+		
 		.sms_Content{
 			margin-left:0em;
 			padding-right:0em;
-			b{ font-weight:400; }
+			b{ font-weight:600; }
 			s{
 				text-decoration:none;
 			}
