Choralies : update suite reunion vendredi Articles SMS tweet

--- a/generator/asset/element/renderer/choralies_render_Articles_for_main_zone.js/less/choralies_render_Articles_for_main_zone.less
+++ b/generator/asset/element/renderer/choralies_render_Articles_for_main_zone.js/less/choralies_render_Articles_for_main_zone.less
@@ -9,7 +9,9 @@
 
 	.article_body{
 
-		margin:2%;
+		margin: 3% 5%;
+		line-height:130%;
+				
 		img {
 			float:left;
 			max-width:40%;
@@ -33,9 +35,12 @@
 			display:block;
 			width:100%;
 			text-align:center;
-			font-size:90%;
-			margin-bottom:1%;
+			font-size:80%;
+			margin-bottom:0%;
 		}
+		p{
+			margin :2% 0;
+		}		
 	}	
 
 }
