Choralies : updates style suite reunion vendredi

--- a/generator/asset/element/renderer/choralies_render_Affiches_for_main_zone.js/less/choralies_render_Affiches_for_main_zone.less
+++ b/generator/asset/element/renderer/choralies_render_Affiches_for_main_zone.js/less/choralies_render_Affiches_for_main_zone.less
@@ -12,7 +12,7 @@
 		margin:2%;
 		img {
 			float:left;
-			max-width:40%;
+			max-width:50%;
 			margin-bottom:2%;
 			margin-right:2%;
 		}
@@ -20,7 +20,7 @@
 		.affiche_Dates{
 
 			font-weight:600;
-			padding:1%;
+			padding:0 1%;
 			margin-bottom:2%;
 			color:@pink;
 			font-size:120%;
@@ -50,6 +50,7 @@
 			.location_small;
 			display:block;
 			margin-bottom:0.8em;
+			margin-top:0.3em;			
 			padding-bottom:0.2em;
 			border-bottom:1px solid @black;
 
