--- a/generator/asset/element/renderer/choralies_render_Announces_for_right_push.js/less/choralies_render_Announces_for_right_push.less
+++ b/generator/asset/element/renderer/choralies_render_Announces_for_right_push.js/less/choralies_render_Announces_for_right_push.less
@@ -5,11 +5,11 @@
 	border:0px solid rgba(255, 255, 255, 0.65);
 	border-bottom:0px solid @black;
 
-	.whiteAlpha;
+	.blackAlpha;
 
 	width:100%;
 
-	color:@black;
+	color:@white;
 
 	font-size:80%;
 	padding-top:2%;
@@ -20,12 +20,13 @@
 
 	.announce_body{
 
-		margin:2%;
+		margin:3%;
 		img {
 			float:left;
 			width:50%;
 			margin-right:3%;
 			margin-bottom:3%;
+			border:1px solid @white;			
 		}
 
 		.announce_Title{
@@ -34,7 +35,7 @@
 			padding:2%;
 			margin-bottom:2%;
 			color:@green;
-			font-size:120%;
+			font-size:110%;
 			background-color:@blue;
 
 		}
