Choralies : update meteo et heure header public attente jour1 atelier

--- a/generator/asset/element/layout/choralies_ateliers/index-ateliers.html
+++ b/generator/asset/element/layout/choralies_ateliers/index-ateliers.html
@@ -39,8 +39,9 @@
 		
 	</head>
 
-	<body onload="$onLoadContent; loadScript('js/libs/less.js');" class="ateliers">
+	<body onload="$onLoadContent; loadScript('js/libs/less.js');init_date();" class="ateliers">
 
+	<div id="date_time"></div>
 	$layoutBody
 			
 		<div id="logo_loading">
