--- a/generator/asset/element/layout/choralies_attente/index-attente.html
+++ b/generator/asset/element/layout/choralies_attente/index-attente.html
@@ -39,8 +39,9 @@
 		
 	</head>
 
-	<body onload="$onLoadContent; loadScript('js/libs/less.js');" class="attente">
+	<body onload="$onLoadContent; loadScript('js/libs/less.js');init_date();" class="attente">
 
+	<div id="date_time"></div>
 	$layoutBody
 						
 		<div id="logo_loading">
