--- a/generator/asset/element/layout/choralies_jour1/index-jour1.html
+++ b/generator/asset/element/layout/choralies_jour1/index-jour1.html
@@ -39,8 +39,9 @@
 		
 	</head>
 
-	<body onload="$onLoadContent; loadScript('js/libs/less.js');" class="jour1">
+	<body onload="$onLoadContent; loadScript('js/libs/less.js');init_date();" class="jour1">
 
+		<div id="date_time"></div>
 		$layoutBody
 						
 		<div id="logo_loading">
