--- a/generator/asset/element/layout/choralies_attente/less/style.less
+++ b/generator/asset/element/layout/choralies_attente/less/style.less
@@ -84,16 +84,18 @@ body
 .design_signature a{
 	position:absolute;
 	right:5px;
-	bottom:5px;
+	bottom:3px;
 	color:@grayLighter;
-	font-size:60%;
+	font-size:50%;
 	text-decoration:none;
 	z-index:1000;
 }
 
 #date_time
 {
-	float:left;
+	position:absolute;
+	top:2%;
+	left:60%;
 	height: 12%;
 	width:18%;
 	text-align:left;
@@ -104,6 +106,6 @@ body
     font-style:normal;
     z-index : 2;
     big {
-    	font-size:280%;
+    	font-size:330%;
     }
 }
