--- a/generator/asset/element/layout/choralies_public/index-public.html
+++ b/generator/asset/element/layout/choralies_public/index-public.html
@@ -39,8 +39,9 @@
 		
 	</head>
 
-	<body onload="$onLoadContent; loadScript('js/libs/less.js');" class="public">
+	<body onload="$onLoadContent; loadScript('js/libs/less.js');init_date();" class="public">
 
+	<div id="date_time"></div>
 	$layoutBody
 							
 		<div id="logo_loading">
