Choralies : update renderer atelier

--- a/generator/asset/element/renderer/choralies_render_Ateliers_for_main.js/less/choralies_render_Ateliers_for_main.less
+++ b/generator/asset/element/renderer/choralies_render_Ateliers_for_main.js/less/choralies_render_Ateliers_for_main.less
@@ -16,38 +16,38 @@
 
 	
 	span{
-		padding:2% 2% 1% 2%;
+		padding:0% 2%;
 		-webkit-box-sizing: border-box; 
 		-moz-box-sizing: border-box;   
-		box-sizing: border-box; 	
-		display:inline-block;	
+		box-sizing: border-box; 		
 		overflow:hidden;
 		display:table-cell;
 		vertical-align:middle;
 		border-bottom:1px solid @black;
 	}
 	
-	.atelier_loc{
+	.atelier_hour{
 		background-color:@black;
 		color:@white;
-		width:27%;
-		height:100%;
+		width:13%;
 		border-bottom:1px solid @white;
+		font-size:140%;
+		text-align:center;
 	}
-	.atelier_title{
-		width:36%;
+	.atelier_loc{
+		width:43%;
 		background:rgba(255, 255, 255, 0.95) url('../img/atelier_arrow.png') no-repeat -5px center;
 		/*text-indent:10px;*/
 	}
 	.atelier_sep{
 		background-color:@pink;
-		width:2%;
+		width:1%;
 	}
-	.atelier_hour{
-		width:13%;
+	.atelier_title{
+		width:43%;
 		background-color:rgba(255, 255, 255, 0.95);
-		font-size:130%;
-		text-align:center;
+		
+		
 	}
 	.atelier_day{
 		width:22%;
