Choralies : update style details

--- a/generator/asset/element/renderer/choralies_render_Announces_for_right_push.js/less/choralies_render_Announces_for_right_push.less
+++ b/generator/asset/element/renderer/choralies_render_Announces_for_right_push.js/less/choralies_render_Announces_for_right_push.less
@@ -34,7 +34,7 @@
 			font-weight:600;
 			padding:2%;
 			margin-bottom:2%;
-			color:@green;
+			color:@white;
 			font-size:110%;
 			background-color:@blue;
 
