Choralies : update style affiches, header

--- a/generator/asset/element/renderer/choralies_render_Affiches_for_main_public_zone.js/less/choralies_render_Affiches_for_main_public_zone.less
+++ b/generator/asset/element/renderer/choralies_render_Affiches_for_main_public_zone.js/less/choralies_render_Affiches_for_main_public_zone.less
@@ -36,6 +36,10 @@
 		}
 		.affiche_Price{
 			float:right;
+			background-color:@black;
+			color:@white;
+			margin:5px 0 5px 5px;
+			padding:1%;			
 		}
 		.affiche_Subtitle{
 			font-weight:500;
