Add css information for loading in all layouts

--- a/generator/asset/element/layout/choralies_theatre/index-theatre.html
+++ b/generator/asset/element/layout/choralies_theatre/index-theatre.html
@@ -4,6 +4,7 @@
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />		
 		
 		<title>YourCast Choralies - Theatre Antique</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
 
 		<script type="text/javascript" src="js/libs/prototype.js"></script>
 		<script type="text/javascript" src="js/utils.js"></script>
