Choralies : update date

--- a/generator/asset/element/renderer/choralies_render_Twitter_for_scrolling.js/less/choralies_render_Twitter_for_scrolling.less
+++ b/generator/asset/element/renderer/choralies_render_Twitter_for_scrolling.js/less/choralies_render_Twitter_for_scrolling.less
@@ -65,3 +65,51 @@
 	}		
 		
 }
+
+	/* Twitter */
+	.logo_user{
+		margin-top:0.3em;
+		height:80%;		
+	}
+	.tweet{
+		moz-box-shadow: none;
+	  	-webkit-box-shadow: none;
+	    box-shadow: none;
+		padding:0px 10px 0 10px;
+		margin-right:20px;
+		display: inline-block;
+	  	line-height:220%;
+	  	height:100%;
+	  	background-color:transparent;
+	  	border:0px;
+		
+		.twitter_title{
+			background-color:transparent;
+			color:@white;
+			padding-top:0em;
+			i { color:@white;}
+			img {
+		  		float:none;
+		  		border-radius : 3px;
+		  		height:80%;
+		  		margin-top:8px;
+		  	}
+		}
+		.twitter_Content{
+			margin-left:0em;
+			padding-right:0em;
+			a{
+				color:@blue;
+				text-decoration:none;
+			}
+			b{ font-weight:400; }
+			s{
+				text-decoration:none;
+			}
+		}		
+	}
+	
+	.info{
+		color:@grayLightPlus;
+		font-style:italic;		
+	}	
