--- a/generator/asset/element/renderer/choralies_render_SMS_for_scrolling.js/less/choralies_render_SMS_for_scrolling.less
+++ b/generator/asset/element/renderer/choralies_render_SMS_for_scrolling.js/less/choralies_render_SMS_for_scrolling.less
@@ -33,3 +33,31 @@
 	}
 		
 }
+
+	span.sms{
+		moz-box-shadow: none;
+	  	-webkit-box-shadow: none;
+	    box-shadow: none;
+		padding:auto 10px auto 20px;
+		margin-right:20px;
+		display: inline-block;
+	  	line-height:220%;
+	  	height:100%;
+	  	background-color:@blue;
+	  	border:0px;
+		
+		
+		.sms_Content{
+			margin-left:0em;
+			padding-right:0em;
+			b{ font-weight:600; }
+			s{
+				text-decoration:none;
+			}
+		}		
+	}
+	
+	.info{
+		color:@grayLightPlus;
+		font-style:italic;
+	}
