--- a/generator/asset/element/zone/headerZone_choralies/style.less
+++ b/generator/asset/element/zone/headerZone_choralies/style.less
@@ -23,6 +23,11 @@
     	display:none;
     }
 }
+@media (max-height: 768px) 	{
+	#${zoneName} { 
+		.yourcast3;
+	}
+}
 @media (max-width: 768px) 	{
 	#${zoneName} {  
 		width:98%;
