--- a/generator/asset/element/layout/choralies_attente/less/functions.less
+++ b/generator/asset/element/layout/choralies_attente/less/functions.less
@@ -156,11 +156,16 @@
 	background: transparent url('../img/experimentation_yourcast_supralog1.png') no-repeat 20% 50%;
 	background-size:8%;
 }
+.yourcast3{
+	background: transparent url('../img/experimentation_yourcast_supralog1.png') no-repeat 28% 62%;
+	background-size:12%;
+
+}
 .yourcast2Mobile{
 	background: transparent url('../img/experimentation_yourcast_supralog1.png') no-repeat 50% 20%;
 	background-size:22%;
 }
-.yourcast3{
+.yourcast4{
 	background: transparent url('../img/experimentation_yourcast_supralog2.png') no-repeat 25% 90%;
 	background-size:15%;
 
