--- a/generator/asset/element/layout/choralies_theatre/less/style.less
+++ b/generator/asset/element/layout/choralies_theatre/less/style.less
@@ -20,7 +20,13 @@ body
     overflow: hidden;
     margin:0;
 }
-
+@media (max-height: 768px) 	{
+	body
+	{
+    -moz-background-size:22%, cover; /* Old Firefox */
+	background-size:15%, cover;
+	}
+}
 @media (max-width: 768px) 	{
 body
 {
