Some changes on models and layouts

--- a/generator/asset/element/layout/choralies_mobile/index-mobile.html
+++ b/generator/asset/element/layout/choralies_mobile/index-mobile.html
@@ -40,8 +40,14 @@
 		
 	</head>
 
-	<body onload="$onLoadContent; loadScript('js/libs/less.js');" class="mobile">
+	<body onload="$onLoadContent; loadScript('js/libs/less.js',true);" class="mobile">
 
+	<div id="headerZone">
+		<span class="logo" id="headerZone_logo"></span>
+		<span class="title" id="headerZone_title"></span>
+		<span class="year">2013</span>
+	</div>
+		
 		$layoutBody
 				
 		<div id="logo_loading">
