--- a/generator/asset/element/layout/choralies_ateliers/index-ateliers.html
+++ b/generator/asset/element/layout/choralies_ateliers/index-ateliers.html
@@ -40,7 +40,7 @@
 		
 	</head>
 
-	<body onload="$onLoadContent; loadScript('js/libs/less.js');init_date();" class="ateliers">
+	<body onload="$onLoadContent; loadScript('js/libs/less.js',true);init_date();" class="ateliers">
 
 	<div id="date_time"></div>
 	$layoutBody
