--- a/generator/asset/element/layout/choralies_attente/index-attente.html
+++ b/generator/asset/element/layout/choralies_attente/index-attente.html
@@ -40,7 +40,7 @@
 		
 	</head>
 
-	<body onload="$onLoadContent; loadScript('js/libs/less.js');init_date();" class="attente">
+	<body onload="$onLoadContent; loadScript('js/libs/less.js',true);init_date();" class="attente">
 
 	<div id="date_time"></div>
 	$layoutBody
