--- a/generator/asset/element/layout/choralies_mobile/less/style.less
+++ b/generator/asset/element/layout/choralies_mobile/less/style.less
@@ -107,3 +107,46 @@ body
     	font-size:230%;
     }
 }
+
+@import "../less/functions.less";
+@import "../less/variables.less";
+
+#headerZone {    
+    width : 100%;
+    height: 16%;
+    background:none;
+    .yourcast2;
+    margin-bottom:0%;
+    color:#ffffff;
+    position:relative;
+    font-size:180%;
+    
+    #headerZone_logo {
+    	display:none;
+    }
+    #headerZone_title{
+  		display:none;
+    }
+ 
+    .year{
+    	margin-left:250px;
+    	display:none;
+    }
+}
+@media (max-height: 768px) 	{
+	#${zoneName} { 
+		.yourcast3;
+	}
+}
+@media (max-width: 768px) 	{
+	#${zoneName} {  
+		width:98%;
+		height:12%;
+		text-align:right;
+		padding-right:2%;
+		line-height:150%;
+		.yourcast2Mobile;
+	}
+}
+
+
