--- a/generator/asset/element/layout/glc/index.html
+++ b/generator/asset/element/layout/glc/index.html
@@ -5,7 +5,6 @@
 
     <title>YourCast</title>
     <script type="text/javascript" src="js/libs/prototype.js"></script>
-    <script type="text/javascript" src="js/libs/scriptaculous/scriptaculous.js?load=effects,slider"></script>
     <script type="text/javascript" src="js/utils.js"></script>
     <script type="text/javascript" src="js/date.js"></script>
     <script type="text/javascript" src="js/controler.js"></script>
@@ -15,35 +14,32 @@
 
     $zoneScripts
 
-    <!-- Alert Script & CSS --><!--
-		<script type="text/javascript" src="zoneAlert/controler.js"></script>
-	    <link href="zoneAlert/style.less" rel="stylesheet/less" />-->
-
-    <!-- Notif Script & CSS --><!--
-		<script type="text/javascript" src="zoneNotif/controler.js"></script>
-		<link href="zoneNotif/style.less" rel="stylesheet/less" />-->
-
-    <!-- import the less interpreter -->
-    <script type="text/javascript" src="js/libs/less.js"></script>
-
     <link href='http://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600' rel='stylesheet' type='text/css'>
+    
+    <script type="text/javascript">
+
+            /**
+             *  Fin de traitement des fichiers less
+             */
+            function finTraitementLess() {
+                
+                // Cache le logo de chargement
+                $('logo_loading').hide();
+
+            }
+                
+		    less = {
+		        env: "production",
+		        async: false,
+		        fileAsync: true
+		    };
+		    
+		</script>
+
 
 </head>
 
-<body onload="$onLoadContent init_date();">
-
-
-<!--  to manage alert -->
-<div id="zoneAlert">
-    <span class="logo" style="display:none" id="zoneAlert_logo"></span>
-    <span class="title" style="display:none" id="zoneAlert_title"></span>
-</div>
-
-<!--  to manage notif -->
-<div id="zoneNotif">
-    <span class="logo" style="display:none" id="zoneNotif_logo"></span>
-    <span class="title" style="display:none" id="zoneNotif_title"></span>
-</div>
+<body onload="$onLoadContent; loadScript('js/libs/less.js',true);init_date();">
 
 <div id="date_time"></div>
 
