--- a/generator/asset/element/layout/choralies_attente/less/style.less
+++ b/generator/asset/element/layout/choralies_attente/less/style.less
@@ -20,7 +20,7 @@ body
     overflow: hidden;
     margin:0;
 }
-@media (max-height: 768px) 	{
+@media (max-width: 1024px)  	{
 	body
 	{
     -moz-background-size:22%, cover; /* Old Firefox */
