--- a/generator/asset/element/layout/choralies_public/less/functions.less
+++ b/generator/asset/element/layout/choralies_public/less/functions.less
@@ -154,16 +154,17 @@
 }
 .yourcast2{
 	background: transparent url('../img/experimentation_yourcast_supralog1.png') no-repeat 20% 50%;
-	background-size:8%;
+	background-size:auto 50%;
 }
+
 .yourcast3{
 	background: transparent url('../img/experimentation_yourcast_supralog1.png') no-repeat 28% 62%;
-	background-size:12%;
+	background-size:auto 53%;
 
 }
 .yourcast2Mobile{
-	background: transparent url('../img/experimentation_yourcast_supralog1.png') no-repeat 50% 20%;
-	background-size:22%;
+	background: transparent url('../img/experimentation_yourcast_supralog1.png') no-repeat 98% 50%;
+	background-size:auto 80%;
 }
 .yourcast4{
 	background: transparent url('../img/experimentation_yourcast_supralog2.png') no-repeat 25% 90%;
