--- a/generator/asset/element/layout/choralies_jour1/less/style.less
+++ b/generator/asset/element/layout/choralies_jour1/less/style.less
@@ -32,11 +32,11 @@ body
 {
     background-color:@black;
     background-image:  url('../img/background_choralies.png'), url('../img/yourcast_background.png');
-    background-position: 2% top, left bottom;
+    background-position: 2% top, left top;
 	background-repeat:no-repeat, no-repeat;
 	/*background-attachment:fixed fixed;*/
-    -moz-background-size:30%, 200% ; /* Old Firefox */
-	background-size:30%, 200% ;
+    -moz-background-size:30%, 250%; /* Old Firefox */
+	background-size:30%, 250% ;
     font-family:@baseFontFamily;
     font-size:2.5em;
 	width: 100%; 
