Some changes in renderers

--- a/generator/asset/element/renderer/glc_render_Announces_for_main_same_title.js/less/glc_render_Announces_for_main_same_title.less
+++ b/generator/asset/element/renderer/glc_render_Announces_for_main_same_title.js/less/glc_render_Announces_for_main_same_title.less
@@ -1,4 +1,13 @@
-.announces_body_different_title{
+@import "functions.less";
+@import "variables.less";
+
+/* announces */
+.announces_title{
+  font-size: 135%;
+  margin-bottom:0.7em;
+}
+
+.announces_body{
   margin-right:2.5em;
   font-weight:300;
   .announces_Dates{
@@ -34,23 +43,11 @@
     font-size: 100%;
     font-weight:400;
     color:@gray;
-    position:absolute;
+    position : absolute;
     bottom : 0.5em;
     left : 0%;
     width:90%;
     text-align:right;
     z-index:101;
   }
-}
-#mainZone .smooth{
-  .smooth;
-  position: absolute;
-  left: 0;
-  bottom:0px;
-  height:100px;
-  width : 100%;
-}
-.smooth{
-  background: transparent url('../img/smooth.png') repeat-x left top;
-  z-index:100;
 }
