--- a/generator/asset/maven/personalizer/src/main/webapp/views/onglet.html
+++ b/generator/asset/maven/personalizer/src/main/webapp/views/onglet.html
@@ -1,13 +1,14 @@
 <div class="hero-unit" xmlns="http://www.w3.org/1999/html">
     <tabs></tabs>
+    
+    <h3 style="text-align: center">Il y a actuellement {{numberCalls}} appels <b>Toutes zones confondues </b></h3>
 </div>
 <div>
     <div>
-        <h3>Il y a actuellement {{numberCalls}} appels <b>Toutes zones confondues </b></h3> 
 
         <p><h3> Lister ou ajouter un appel dans une des zones suivantes </h3></p>
         <ul ng-repeat="zone in zones">
-           <li><h4><a href="#/tab/{{tab}}/{{zone}}">{{zone}}</a></h4></li>
+           <li><h3><a href="#/tab/{{tab}}/{{zone}}">{{zone}}</a></h3></li>
         </ul>
     </div>
 </div>
