Rajouts des renderers de glc. Pas tous les less implatés.

--- a/generator/asset/element/renderer/glc_render_Announces_for_main_different_title.js/less/glc_render_Announces_for_main_different_title.less
+++ b/generator/asset/element/renderer/glc_render_Announces_for_main_different_title.js/less/glc_render_Announces_for_main_different_title.less
@@ -1,13 +1,7 @@
 @import "functions.less";
 @import "variables.less";
 
-/* announces */
-.announces_title{
-  font-size: 135%;
-  margin-bottom:0.7em;
-}
-
-.announces_body{
+.announces_body_different_title{
   margin-right:2.5em;
   font-weight:300;
   .announces_Dates{
@@ -43,7 +37,7 @@
     font-size: 100%;
     font-weight:400;
     color:@gray;
-    position : absolute;
+    position:absolute;
     bottom : 0.5em;
     left : 0%;
     width:90%;
