--- a/generator/asset/element/layout/choralies_attente/less/style.less
+++ b/generator/asset/element/layout/choralies_attente/less/style.less
@@ -115,3 +115,12 @@ body
     	font-size:250%;
     }
 }
+@media (max-width: 1024px) 	{
+#date_time
+{
+	top:1%;
+	left:14%;
+	height: 10%;
+    font-size: 54%;
+}	
+}
