Change zone style for glc

--- a/generator/asset/element/zone/bottomZone_glc/style.less
+++ b/generator/asset/element/zone/bottomZone_glc/style.less
@@ -1,7 +1,7 @@
 @import "../less/functions.less";
 @import "../less/variables.less";
 
-#scrollingZone {
+#${zoneName} {
     height:10%;
     margin-top:1%;
     overflow:hidden;
@@ -9,357 +9,4 @@
     -moz-transition: all .5s ease-in;
     transition: all .5s ease-in;
     position:relative;
-   
-}
-
-#scrollingZone .noinfo{
-	display:table;
-	.lightBackground;
-	margin-left:1%;
-	margin-right:1%;
-	width:98%;
-	font-size:95%;
-	font-weight:400;
-	height:90%;
-
-	text-align:center;
-	div{
-		display:table-cell;
-		vertical-align:middle;
-	}
-}
-
-#scrollingZone span {
-  position: relative;
-}
-
-#scrollingZone .title{
-	display:none;
-}
-
-#scrollingZone .scrollContentLogoLeftBefore{
-    float:left;
-    height:90%;
-    .leftArrow;
-}
-
-
-#scrollingZone .scrollContentLeft{
-    margin-left:10px;
-    margin-right:10px;
-    height:90%;
-    color:@white;
-    overflow:hidden;
-    span{
-    	line-height:135%;
-    }
-    .blackAlpha;
-}
-
-#scrollingZone .scrollContentLogoLeft{
-    margin-left:100px;
-    margin-right:10px;
-    height:90%;
-    color:@white;
-    overflow:hidden;
-    span{
-    	line-height:135%;
-    }
-    .blackAlpha;
-    
-}
-#scrollingZone .scrollContentEachLogoLeft{
-    margin-left:10px;
-    margin-right:10px;
-    height:90%;
-    color:@white;
-    overflow:hidden;
-    span{
-    	line-height:135%;
-    }
-    position:relative;
-}
-
-
-#scrollingZone .scrollContentLeft .scrollContent{
-  font-size:120%;
-  white-space: nowrap;
-  display: inline-block;
-  line-height:135%;
-  height:100%;
-  
-  /* announces */
-	.announce{
-		padding:0px 30px 0px 0;
-		margin-right:10px;
-		display: inline-block;
-  		line-height:220%;
-  		height:100%;
-		.announceSeparator;
-	}
-	.announces_Dates{
-		display:inline-block;
-		color:@green;
-		margin:0 10px 0 10px;
-        i {
-           font-weight:500;
-           font-style:normal;
-        }
-        .date;
-	}
-	
-	/* calendar */
-	.calendar_event{	
-		padding:0px 30px 0px 0;
-		margin-right:10px;
-		display: inline-block;
-  		line-height:220%;
-  		height:100%;
-		.calendarSeparator;
-	}
-	.calendar_Dates{
-		display:inline-block;
-		color:@red;
-		margin:0 10px 0 10px;
-        i {
-            font-weight:500;
-            font-style:normal;
-        }
-        .date;
-	}
-	.calendar_location{
-		display:inline-block;
-		.location;
-	}	
-	
-	/* Twitter */
-	.tweet{
-		moz-box-shadow: none;
-	    -webkit-box-shadow: none;
-	    box-shadow: none;
-		padding:0px 20px 0px 0;
-		margin-right:10px;
-		display: inline-block;
-  		line-height:220%;
-  		height:100%;		
-	}
-	.twitter_title{
-		background-color:transparent;
-		color:@white;
-		padding-top:0em;
-		i { color:@grayLight; }
-		img {
-	  		float:none;
-	  		border-radius : 3px;
-	  		height:80%;
-	  	}
-	}
-	.twitter_Content{
-		margin-left:0em;
-		padding-right:0em;
-		a{
-			color:@blue;
-			text-decoration:none;
-		}
-		s{
-			text-decoration:none;
-		}
-		b{ font-weight:400; }
-	}
-}
-
-#scrollingZone .scrollContentLogoLeft .scrollContent{
-	font-size:120%;
-	white-space: nowrap;
-	display: inline-block;
-	line-height:135%;
-	height:100%;
-  
-	/* announce */	
-	.announce{
-		padding:0px 30px 0px 0;
-		margin-right:10px;
-		display: inline-block;
-	  	line-height:220%;
-	  	height:100%;	
-		.announceSeparator;
-	}
-	.announces_Dates{
-		display:inline-block;
-		color:@green;
-		margin:0 10px 0 10px;
-		i {
-			font-weight:500;
-			font-style:normal;
-		}
-		.date;
-	}
-
-	/* calendar */
-	.calendar_event{
-		padding:0px 30px 0px 0;
-		margin-right:10px;
-		display: inline-block;
-		line-height:220%;
-  		height:100%;
-		.calendarSeparator;
-	}
-	.calendar_Dates{
-		display:inline-block;
-		color:@red;
-		margin:0 10px 0 10px;
-        i {
-            font-weight:500;
-            font-style:normal;
-        }
-        .date;
-	}
-	.calendar_location{
-		display:inline-block;
-		.location;
-	}
-
-	/* Twitter */
-	.tweet{
-		moz-box-shadow: none;
-	    -webkit-box-shadow: none;
-	    box-shadow: none;
-		padding:0px 20px 0px 0;
-		margin-right:10px;
-		display: inline-block;
-  		line-height:220%;
-  		height:100%;		
-	}
-	.twitter_title{
-		background-color:transparent;
-		color:@white;
-		padding-top:0em;
-		i { color:@grayLight; }
-		img {
-	  		float:none;
-	  		border-radius : 3px;
-	  		height:80%;
-	  	}
-	}
-	.twitter_Content{
-		margin-left:0em;
-		padding-right:0em;
-		a{
-			color:@blue;
-			text-decoration:none;
-		}
-		s{
-			text-decoration:none;
-		}
-		b{ font-weight:400; }
-	}			
-}
-
-#scrollingZone .scrollContentEachLogoLeft .scrollContent{
-	font-size:120%;
-	white-space: nowrap;
-	display: inline-block;
-	line-height:135%;
-	height:100%;
-		
-	/* announce */
-	.announce{
-		padding:0px 10px 0 10px;
-		margin-right:40px;
-		.blackAlpha;
-		display: inline-block;
-	  	line-height:220%;
-	  	height:100%;
-		.announces_Dates{
-			color:@green;
-			display:inline-block;
-			margin:0 10px 0 10px;
-	    i {
-	        font-weight:500;
-	        font-style:normal;
-	    }
-    	.date;
-		}
-	}
-	
-	/* calendar */
-	.calendar_event{
-		padding:0px 20px 0px 10px;
-		margin-right:40px;
-		.blackAlpha;
-		display: inline-block;
-	  	line-height:220%;
-	  	height:100%;	
-	}
-	.calendar_Dates{
-		display:inline-block;
-		color:@red;
-		margin:0 10px 0 10px;
-        i {
-            font-weight:500;
-            font-style:normal;
-        }
-        .date;
-	}
-	.calendar_location{
-		display:inline-block;
-		.location;
-	}
-		
-
-	/* Twitter */
-	.logo_user{
-		margin-top:0.3em;
-		height:80%;		
-	}
-	.tweet{
-		moz-box-shadow: none;
-	  	-webkit-box-shadow: none;
-	    box-shadow: none;
-		padding:0px 10px 0 10px;
-		margin-right:20px;
-		.blackAlpha;
-		display: inline-block;
-	  	line-height:220%;
-	  	height:100%;
-		
-		.twitter_title{
-			background-color:transparent;
-			color:@white;
-			padding-top:0em;
-			i { color:@grayLight;}
-			img {
-		  		float:none;
-		  		border-radius : 3px;
-		  		height:80%;
-		  		margin-top:8px;
-		  	}
-		}
-		.twitter_Content{
-			margin-left:0em;
-			padding-right:0em;
-			a{
-				color:@blue;
-				text-decoration:none;
-			}
-			b{ font-weight:400; }
-			s{
-				text-decoration:none;
-			}
-		}		
-	}
-	
-	
-		
-}
-
-#scrollingZone #scrollingZone_logo {
-  float:left;
-  width:80px;
-  overflow: hidden;
-  z-index: 1;
-  margin-left:10px;
-  img{
-  	margin-top:8px;
-  }
 }
