--- a/generator/asset/element/zone/headerZone_glc/style.less
+++ b/generator/asset/element/zone/headerZone_glc/style.less
@@ -1,7 +1,7 @@
 @import "../less/functions.less";
 @import "../less/variables.less";
 
-#headerZone {    
+#${zoneName} {    
     width : 81%;
     float:left;
     height: 12%;
@@ -10,14 +10,4 @@
     margin-bottom:0%;
     color:#ffffff;
     position:relative;
-}
-
-#headerZone .design_signature a{
-	position:absolute;
-	right:2px;
-	top:50px;
-	color:@grayLighter;
-	font-size:45%;
-	text-decoration:none;
-	z-index:1000;
 }
