--- a/generator/asset/element/zone/rightZone_glc/style.less
+++ b/generator/asset/element/zone/rightZone_glc/style.less
@@ -1,196 +1,12 @@
 @import "../less/functions.less";
 @import "../less/variables.less";
 
-#pushZone {
-		float:right;
+#${zoneName} {
+    float:right;
     font-size: 100%;
     height: 76%;
     width: 28%;
     margin-top: 0%;
     overflow: hidden;
     position: relative;
-   }
-
-
-#pushZone .title{
-	display:none;
 }
-
-#pushZone .noinfo{
-	display:table;
-	.lightBackground;
-	width:91%;
-	font-size:95%;
-	font-weight:400;
-	height:100%;
-	padding:2%;
-	text-align:center;
-	div{
-		display:table-cell;
-		vertical-align:middle;
-	}
-}
-
-#pushZone #pushZone_logo {
-  width:80px;
-  overflow: hidden;
-  z-index: 1;
-  margin-left:10px;
-  display:none;
-  padding:0;
-}
-
-#pushZone .push_div_zone4{
-	margin-bottom:0px;
-	border:1px solid rgba(0, 0, 0, 0.75);
-	border-bottom:5px solid @black;
-	.blackAlpha;
-	width:95%;
-	color:@white;
-	font-size:50%;
-	
-	/* announce */
-	.announces_body{
-		margin:10px 10px 10px 10px;
-		img {
-			float:right;
-			width:7%;
-		}
-		.announces_Title{
-			font-weight:600;
-			padding-bottom:0.5em;
-			padding-top:0.5em;
-		}
-		.announces_Content{
-			font-weight:400;
-		}
-		.announces_Dates{
-			.dateSmall;
-		}
-		.announces_Author{
-			position:relative;
-			bottom:0;
-			left:0;
-			color:@grayLight;
-			font-style:italic;
-			width:100%;
-		}
-	}
-	
-	/* calendar */
-	.calendar_body{
-		margin:10px 10px 10px 10px;
-		img {
-			float:right;
-			width:7%;
-		}		
-		.calendar_title{
-			font-weight:600;
-		}
-		.calendar_edt_events {
-			position : relative;
-		   	margin-top: 0.3em;
-		   	margin-bottom : 0.5em;
-			width: 100%;
-			.calendar_edt_header {
-				.edt-header-background;
-				color:@gray;
-				.calendar_edt_hours{
-					.date_edt_small;
-					display:inline-block;
-					i{font-style:normal;}
-				}
-				.calendar_edt_hours.inProgress{
-					.date_edt_in_progress_small;
-					display:inline-block;
-					color:@white;
-					i{font-style:normal;}
-				}
-				.calendar_edt_location {
-					float : right;
-					display:inline-block;
-					.location_edt_small;
-					margin-right:5px;
-				}
-			}
-			.calendar_edt_header.inProgress {
-				.edt-header-background_in_progress;
-			}
-						
-			.calendar_edt_summary{
-				color:@black;
-				-moz-box-shadow: 0px 0px 0px #ccc;
-    			-webkit-box-shadow: 0px 0px 0px #ccc;
-    			box-shadow: 0px 0px 0px #ccc;
-	    		padding-top:1em;	
-			}
-		}
-		.calendar_dates_multiple_element_hour_top{
-			color:@white;
-		}		
-	}
-
-	/* twitter */
-	.tweet{
-		-moz-box-shadow: none;
-	    -webkit-box-shadow: none;
-	    box-shadow: none;
-	}
-	.twitter_title{
-	  background-color:transparent;
-	  color:@white;
-	  padding-top:0.5em;
-	  font-weight:500;
-	  line-height:150%;
-		i {
-			color:@grayLight;
-			font-size:100%
-		}
-		img {
-  		float:left;
-  		margin : 0em 0.3em 0.3em 0.4em;
-  		border-radius : 3px;
-  		width:48px;
-	  	}
-	}
-	.twitter_body{
-		background-color:transparent;
-		color:@white;
-		padding-bottom:0.3em;
-		margin-bottom:0px;
-		.twitter_Content{
-			margin-left:4em;
-			padding-right:0.5em;
-		}
-		.twitter_Date{
-			color:@grayLight;
-			line-height:120%;
-		}
-	}
-	
-	/* RSS */
-	.rss_body{
-		margin:5px 10px 10px 10px;
-		.rss_Title{
-			font-weight:600;
-			padding-bottom:0.5em;
-			padding-top:0.5em;
-			font-size:120%;
-		}
-		.rss_Content{
-			font-weight:400;
-		}		
-	}	
-	.rss_source{
-		background-color:@black;
-		line-height:160%;
-		font-size:150%;
-		text-align:center;
-		padding-top:5px;
-		img{
-			margin:0px 5px 5px 0;
-			width:6%;
-		}
-	}
-}
-
