Changement less rightzone.

--- a/generator/asset/element/zone/rightZone_glc/style.less
+++ b/generator/asset/element/zone/rightZone_glc/style.less
@@ -1,12 +1,18 @@
 @import "../less/functions.less";
 @import "../less/variables.less";
 
-#${zoneName} {
-    float:right;
+
+#RightZone {
     font-size: 100%;
     height: 76%;
     width: 28%;
-    margin-top: 0%;
     overflow: hidden;
-    position: relative;
+    position: absolute;
+    right: 10px;
+    top: 12%;
+}
+
+
+#RightZone .title{
+	display:none;
 }
