--- a/generator/asset/element/zone/rightZone_glc/style.less
+++ b/generator/asset/element/zone/rightZone_glc/style.less
@@ -2,7 +2,7 @@
 @import "../less/variables.less";
 
 
-#RightZone {
+#${zoneName} {
     font-size: 100%;
     height: 76%;
     width: 28%;
@@ -13,6 +13,6 @@
 }
 
 
-#RightZone .title{
+#${zoneName} .title{
 	display:none;
 }
